# TimerZone

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  network.cpp  network.hpp  readme.md  server.py  timer.hpp  todo.hpp
src/: app.cpp  app.hpp  bg.hpp  network.cpp  network.hpp  timer.hpp  todo.hpp  ui.cpp  ui.hpp
